--- a/APP/templates/APP/Transito.html
+++ b/APP/templates/APP/Transito.html
@@ -1,6 +1,11 @@
 {% extends "APP/padre.html" %}
-{% block Contenido %}
 {% load static %}
+{% block Title %}
+<title>Transito</title>
+<link rel="icon" type="image/x-icon" href="{%static 'APP/img/ayudaanimal.png'%}">
+
+{% endblock %}
+{% block Contenido %}
 <div class="container botonsend pb-3">
   <hr>
   <h1>Transito</h1>
