--- a/APP/templates/APP/articulo_confirm_delete.html
+++ b/APP/templates/APP/articulo_confirm_delete.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="{% static 'APP/css/style.css' %}" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <title>Document</title>
+  <link href="{% static 'APP/img/style.css' %}" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/img/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>Eliminar</title>
+  <link rel="icon" type="image/x-icon" href="{%static 'APP/img/ayudaanimal.png'%}">
 </head>
 <body class="hidden">
   <div class="loader">
@@ -52,7 +53,7 @@
     <div class="formularioDog">
       <table>
         <form method="post">{% csrf_token %}
-          <img class="tacho"src="{%static 'APP/css/eliminar.png'%}" alt="" srcset="" width="40px"></a>
+          <img class="tacho"src="{%static 'APP/img/eliminar.png'%}" alt="" srcset="" width="40px"></a>
           <div class="textoEliminar">
           <strong>¿Estas seguro que desea eliminar el articulo "{{ object.title }}"?</strong>
           <p class="info">La imagen y su contenido seran eliminados permanentemente</p>
