--- a/APP/templates/APP/articulo_form.html
+++ b/APP/templates/APP/articulo_form.html
@@ -1,5 +1,10 @@
 {% extends "APP/padre.html" %}
 {% load static %}
+{% block Title %}
+<title>Editar Articulo</title>
+<link rel="icon" type="image/x-icon" href="{%static 'APP/img/ayudaanimal.png'%}">
+
+{% endblock %}
 {% block Contenido %}
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
