--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -23,10 +23,13 @@
 
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
-  <title>Document</title>
+  {% block Title %}
+
+
+  {% endblock %}
   <style>
     body {
-      background-image: url("{% static 'APP/css/fondo.png' %}");
+      background-image: url("{% static 'APP/img/fondo.png' %}");
     }
   </style>
 
@@ -74,7 +77,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <img class="navbar-brand" src="{% static 'APP/css/ayudaanimal.png' %}" alt="" srcset="" width="70" height="70">
+      <img class="navbar-brand" src="{% static 'APP/img/ayudaanimal.png' %}" alt="" srcset="" width="70" height="70">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -103,15 +106,15 @@
         <div class="paneles">
           {% if request.user.is_authenticated %}
           <div class="nav-item cerrar"><a class="boton2" href="{%url 'adopcion'%}">Edición<img class="botonimg2"
-                src="{% static 'APP/css/hocico.png' %}" alt="" width="30px"></a>
+                src="{% static 'APP/img/hocico.png' %}" alt="" width="30px"></a>
             <a class="boton1" href="{%url 'panel-logout'%}">Cerrar sesión <img class="botonimg1"
-                src="{% static 'APP/css/hueso1.png' %}" alt="" width="40px"></a>
+                src="{% static 'APP/img/hueso1.png' %}" alt="" width="40px"></a>
           </div>
           {%endif%}
 
           {% if not request.user.is_authenticated %}
           <a class="nav-item boton" href="{% url 'panel-login' %}">Iniciar sesion <img class="botonimg"
-              src="{% static 'APP/css/pataboton.png' %}" alt="" width="40px"></a>
+              src="{% static 'APP/img/pataboton.png' %}" alt="" width="40px"></a>
           {%endif%}
         </div>
 
@@ -143,9 +146,9 @@
       <div class="miimagen">
 
         <a href="https://www.instagram.com/ayuda_animal.ok/" target="_blank"><img class=""
-            src="{% static 'APP/css/inst.png' %}" alt="" width="20px"></a>
+            src="{% static 'APP/img/inst.png' %}" alt="" width="20px"></a>
         <a href="https://www.facebook.com/Ayuda_animalok-105794385347786" target="_blank"><img class=""
-            src="{% static 'APP/css/face.png' %}" alt=""></a>
+            src="{% static 'APP/img/face.png' %}" alt=""></a>
       </div>
     </div>
   </footer>
