title ver detalels

--- a/APP_PANEL/templates/APP_PANEL/article_detail.html
+++ b/APP_PANEL/templates/APP_PANEL/article_detail.html
@@ -1,5 +1,10 @@
 {% extends "APP/padre.html" %}
 {% load static %}
+{% block Title %}
+<title>Detalles</title>
+<link rel="icon" type="image/x-icon" href="{%static 'APP/img/ayudaanimal.png'%}">
+
+{% endblock %}
 {% block Contenido %}
 
 <!-- <section class="py-5 text-center container">
