--- a/APP/templates/APP/articulo_confirm_delete.html
+++ b/APP/templates/APP/articulo_confirm_delete.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="{% static 'APP/img/style.css' %}" rel="stylesheet" />
+  <link href="{% static 'APP/css/style.css' %}" rel="stylesheet" />
+  <link href="{% static 'APP/css/bootstrap.css' %}" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/img/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Eliminar</title>
   <link rel="icon" type="image/x-icon" href="{%static 'APP/img/ayudaanimal.png'%}">
@@ -60,7 +61,7 @@
         </div>
          
           <div class="eliminacionBotones">
-          <input class="btn btn-danger" type="submit" value="Eliminar" />
+          <input class="btn btn-danger botonMargin" type="submit" value="Eliminar" />
 
           <a  class="btn btn-primary ml-2" href="{% url 'adopcion' %}">No</a>
         </div>
