--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -156,6 +156,7 @@
   <script src="{% static 'APP/js/bootstrap.js' %}"></script>
   <script src="{% static 'APP/js/hover.js' %}"></script>
   <script src="{% static 'APP/js/hover1.js' %}"></script>
+  <script src="{% static 'APP/js/imagenes.js' %}"></script>
   <script src="{% static 'APP/js/hover2.js' %}"></script>
   <script src="{% static 'APP/js/hover3.js' %}"></script>
   <script src="{% static 'APP/js/scrollEfects.js' %}"></script>
