--- a/APP/templates/APP/articulo_form.html
+++ b/APP/templates/APP/articulo_form.html
@@ -11,7 +11,7 @@
 
 <div class="textFieldEdition container">
 
-  <form class="loginform" method="POST">
+  <form class="loginform" method="POST" enctype=multipart/form-data>
     <h1>Editar articulo</h1>
     {% csrf_token%}
     {{form.as_ul}}
