--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -21,12 +21,12 @@
         </div>
       </div>
       <div class="vacio">
-        <img class="imagenCarousel" src="{% static 'APP/img/perro3.jpg' %}" alt="" class="d-block w-100 imagenes"
+        <img src="{% static 'APP/img/perro3.jpg' %}" alt="" class="d-block w-100 imagenes1 imagenCarousel"
           height="700">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="{% static 'APP/img/perro2.jpg' %}" alt="" class="d-block w-100 imagenes">
+      <img src="{% static 'APP/img/fotodeperro.jpg' %}" alt="" class="d-block w-100 imagenes">
     </div>
   </div>
   <a href="#carouselExample" class="carousel-control-prev" rol="button" data-slide="prev">
