Mejoras en pagina de error 404

--- a/APP/templates/APP/Donaciones.html
+++ b/APP/templates/APP/Donaciones.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block Contenido %}
 
-<div class="container botonsend pb-3">
+<div class="container containerPrincipal botonsend pb-3">
   <hr>
   <h1>Donaciones</h1>
   <h3>Sumate! Tu colaboracion es de vital importancia para solventar cualquier contratiempo que surja</h3>
