--- a/APP/templates/APP/Transito.html
+++ b/APP/templates/APP/Transito.html
@@ -6,7 +6,7 @@
 
 {% endblock %}
 {% block Contenido %}
-<div class="container botonsend pb-3">
+<div class="container containerPrincipal botonsend pb-3">
   <hr>
   <h1>Transito</h1>
 
