--- a/APP/static/APP/css/style.css
+++ b/APP/static/APP/css/style.css
@@ -12,7 +12,18 @@
 h1, h2{
   font-family: 'Lazydog', sans-serif;
 }
+.error404{
+  display: flex;
+  height: 800px;
+  margin-top: 80px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
+.h3error{
+  color: red;
+}
 .container {
   background-color: rgb(255, 255, 255);
 
