--- a/APP/templates/APP/404.html
+++ b/APP/templates/APP/404.html
@@ -8,7 +8,8 @@
 {% block Contenido %}
 <div class="container error404">
     <img class="navbar-brand" src="{% static 'APP/img/ayudaanimal.png' %}" alt="" srcset="" width="300px" height="300px">
-    <h3>ERORR 404</h3>
+    <h3 class="h3error">ERORR 404</h3>
+    <p>Algo salió mal, la pagina no fue encontrada</p>
     <a class="btn btn-primary" href="{%url 'raiz'%}">Volver al Inicio</a>
 
 </div>
