--- a/APP/templates/APP/Contactenos.html
+++ b/APP/templates/APP/Contactenos.html
@@ -15,9 +15,10 @@
       Somos un grupo de vecinas de Ciudad Evita que nos organizamos para dar socorro a los animales que se encuentran en
       situación de calle.<hr>
     </p>
+    <p>Todas las novedades de los rescatados las informamos por nuestras redes  <a class="instagramImg" href="https://www.instagram.com/ayuda_animal.ok/" target="_blank">Instagram</a> o por <a class="instagramImg" href="https://www.facebook.com/Ayuda_animalok-105794385347786" target="_blank">Facebook</a>, donde pueden seguir cada caso y contactarse con nosotras.</p> 
     <p>
       Esta organización es sin fines de lucro, todo lo recibido es para los animales rescatados.
-      A futuro se buscara que la organización pase a ser una ONG, pero al no tener un edificio físico donde situarla no
+       A futuro se buscara que la organización pase a ser una ONG, pero al no tener un edificio físico donde situarla no
       es posible por el momento.<hr>
     </p>
     <p>
