--- a/APP/templates/APP/Donaciones.html
+++ b/APP/templates/APP/Donaciones.html
@@ -11,8 +11,9 @@
   <hr>
   <h1>Donaciones</h1>
   <h3>Sumate! Tu colaboración es de vital importancia para solventar cualquier contratiempo que surja</h3>
-  <p>Tu ayuda nos permite ofrecerle a nuestros animales todo lo que ellos necesitan hasta conseguirles un nuevo hogar
+  <p>Tu ayuda nos permite ofrecerle a nuestros animales todo lo que ellos necesitan hasta conseguirles un nuevo hogar.
   </p>
+  <p>si desea donar por transferencia nuestro alias es el siguiente: AYUDA.ANIMAL.EVITA</p>
   <h3>Dona por Mercado Pago</h3>
   <hr>
   <img class="mercadopago" src="{%static 'APP/img/mercadop.png' %}" width="500px" alt="" srcset="">
