--- a/APP/templates/APP/Transito.html
+++ b/APP/templates/APP/Transito.html
@@ -13,6 +13,9 @@
   <p>
     ¡Bienvenidos/as a transitar! 🐶😸
   </p>
+  <div class="imagenTransito">
+    <img class="imgTransito" src="{%static 'APP/img/transito.jpg' %}" alt="" srcset="" >
+  </div>
   <hr>
     <p>
     Lamentablemente no contamos con lugar físico donde alojar a los rescataditos mientras se recuperan y les conseguimos familia. 
