--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -114,7 +114,7 @@
               <a class="nav-link" href="{%url 'donaciones'%}">Donaciones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%url 'contactenos'%}">Contáctenos</a>
+              <a class="nav-link" href="{%url 'contactenos'%}">Quienes somos</a>
             </li>
         </div>
         <div class="paneles">
@@ -155,7 +155,7 @@
 
     <div class="ultimo">
       <div class="compania">
-        <p class="company text-muted">© 2022 Ayuda Animal</p>
+        <p class="company text-muted">© 2023 Ayuda Animal</p>
       </div>
       <div class="miimagen">
 
