--- a/APP_PANEL/templates/APP_PANEL/article_detail.html
+++ b/APP_PANEL/templates/APP_PANEL/article_detail.html
@@ -26,7 +26,7 @@
     </div>
   </main> -->
   
-  <div id="carouselExample" class="carousel slide container container_" data-ride="carousel">
+  <div id="carouselExample" class="carousel slide container " data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExample" data-slide-to="1"></li>
