--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -150,7 +150,7 @@
       <li class="nav-item"><a href="{%url 'adopcion'%}" class="nav-link px-2 text-muted">Adopcion</a></li>
       <li class="nav-item"><a href="{%url 'transito'%}" class="nav-link px-2 text-muted">Transito</a></li>
       <li class="nav-item"><a href="{%url 'donaciones'%}" class="nav-link px-2 text-muted">Donaciones</a></li>
-      <li class="nav-item"><a href="{%url 'contactenos'%}" class="nav-link px-2 text-muted">Contactenos</a></li>
+      <li class="nav-item"><a href="{%url 'contactenos'%}" class="nav-link px-2 text-muted">Quienes somos</a></li>
     </ul>
 
     <div class="ultimo">
