--- a/APP/templates/APP/Adopcionsinusoeliminar.html
+++ b/APP/templates/APP/Adopcionsinusoeliminar.html
@@ -17,3 +17,6 @@
 {% endfor %}
 </div>
 {% endblock %}
+{% block Cargando %}
+      <p class="pcontenedor">Cargando...</p>
+      {% endblock Cargando %}
