--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -85,7 +85,9 @@
       </div>
     </div>
     <div class="texto">
-      <p class="pcontenedor">Cargando...</p>
+      {% block Cargando %}
+
+      {% endblock Cargando %}
     </div>
   </div>
 
