--- a/APP_PANEL/templates/APP_PANEL/panel_login.html
+++ b/APP_PANEL/templates/APP_PANEL/panel_login.html
@@ -24,3 +24,6 @@
   </form>
 </div>
 {% endblock %}
+{% block Cargando %}
+      <p class="pcontenedor">Cargando...</p>
+      {% endblock Cargando %}
