--- a/APP_PANEL/templates/APP_PANEL/panel_logout.html
+++ b/APP_PANEL/templates/APP_PANEL/panel_logout.html
@@ -2,3 +2,6 @@
 {% block Contenido %}
 {% load static %}
 {% endblock %}
+{% block Cargando %}
+      <p class="pcontenedor">Cargando...</p>
+{% endblock Cargando %}
