--- a/APP/static/APP/css/style.css
+++ b/APP/static/APP/css/style.css
@@ -9,6 +9,9 @@
   font-family: 'PT Sans', sans-serif;
 }
 
+
+
+
 h1, h2{
   font-family: 'Lazydog', sans-serif;
 }
@@ -851,7 +854,9 @@ PRELOADER SUPER PESADO */
   overflow: hidden;
 }
 
-
+.escondidox{
+  overflow: hidden;
+}
 .loader {
   width: 100%;
   height: 100%;
@@ -862,6 +867,20 @@ PRELOADER SUPER PESADO */
   align-items: center;
   background: linear-gradient(to bottom left, #c779b3 40%, #fff9ff 100%);
   z-index: 9999;
+}
+.loaderit{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(to bottom left, #c779b3 40%, #fff9ff 100%);
+  z-index: 9999;
+}
+.loaderit p{
+  margin-top: 30px;
 }
 
 .loader p {
