--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -104,3 +104,6 @@
   <script src="{% static 'APP/js/debug.addIndicators.min.js' %}"></script>
 
   {% endblock %}
+  {% block Cargando %}
+      <p class="pcontenedor">Cargando...</p>
+      {% endblock Cargando %}
