--- a/APP_PANEL/templates/APP_PANEL/adoption.html
+++ b/APP_PANEL/templates/APP_PANEL/adoption.html
@@ -59,3 +59,6 @@
 <script src="{% static 'APP/js/scrollEfects.js' %}"></script>
 <script src="{% static 'APP/js/debug.addIndicators.min.js' %}"></script>
 {% endblock %}
+{% block Cargando %}
+      <p class="pcontenedor">Cargando...</p>
+      {% endblock Cargando %}
