--- a/APP_PANEL/templates/APP_PANEL/article_list.html
+++ b/APP_PANEL/templates/APP_PANEL/article_list.html
@@ -30,3 +30,6 @@
   {% endfor %}
 </div>
 {% endblock %}
+{% block Cargando %}
+      <p class="pcontenedor">Cargando...</p>
+      {% endblock Cargando %}
