funcion mostrar password

--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -85,9 +85,7 @@
       </div>
     </div>
     <div class="texto">
-      {% block Cargando %}
-
-      {% endblock Cargando %}
+      <p class="pcontenedor">Cargando...</p>
     </div>
   </div>
 
