--- a/APP/templates/APP/articulo_form.html
+++ b/APP/templates/APP/articulo_form.html
@@ -11,15 +11,27 @@
 
 <div class="textFieldEdition container">
 
-  <form class="loginform" method="POST" enctype=multipart/form-data>
+  <form id="formulario" class="loginform" method="POST" enctype=multipart/form-data>
     <h1>Editar articulo</h1>
     {% csrf_token%}
     {{form.as_ul}}
     <input class="btn btn-primary" type="submit" value="Enviar">
+    <div class="escondido">
+      <div class="spiner">
+
+        <div class="lds-roller hiddenx"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        <div class="aguarde">
+          <p>
+            Actualizando imagenes aguarde
+          </p>
+        </div>
+      </div>
+    </div>
   </form>
 </div>
-
+<script>
+  document.getElementById("formulario").addEventListener("submit", function(event) {
+    document.querySelector(".escondido").style.display="inline-block";
+  });
+</script>
 {% endblock %}
-{% block Cargando %}
-      <p class="pcontenedor">Cargando...</p>
-      {% endblock Cargando %}
