--- a/APP_PANEL/templates/APP_PANEL/article_form.html
+++ b/APP_PANEL/templates/APP_PANEL/article_form.html
@@ -16,15 +16,22 @@
     {% csrf_token%}
     {{form.as_p}}
     <input class="btn btn-primary" type="submit" value="Enviar">
+    <div class="escondido">
+      <div class="spiner">
+
+        <div class="lds-roller hiddenx"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        <div class="aguarde">
+          <p>
+            Cargando imagenes aguarde
+          </p>
+        </div>
+      </div>
+    </div>
   </form>
 </div>
 <script>
-  document.querySelector(".loader").style.display="none";
-  document.getElementById("formulario").addEventListener("submit", function() {
-    document.querySelector(".loader").style.display="flex";
+  document.getElementById("formulario").addEventListener("submit", function(event) {
+    document.querySelector(".escondido").style.display="inline-block";
   });
 </script>
 {% endblock %}
-{% block Cargando %}
-      <p class="pcontenedor">Cargando Imagenes...</p>
-      {% endblock Cargando %}
